--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,20 @@ main
 	width: 100%;
 	box-sizing: border-box;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	padding: 0 var(--main-margin);
-	gap: 6rem;
+	grid-template-columns: repeat(4, 1fr);
+	padding: var(--main-margin) var(--main-margin);
+	gap: 5vw;
+}
+
+main a
+{
+	text-decoration: none;
+	color: inherit;
+	word-break: break-all;
 }
 
 figure
 {
-	word-break: break-all;
 	padding: 0;
 	margin: 0;
 }
@@ -34,26 +40,69 @@ figure
 
 .country-card figcaption p
 {
-	line-height: 50%;
+	line-height: 90%;
 	font-size: 1rem;
 }
 
 .country-card figcaption h2
 {
 	font-size: 1.2rem;
-
-}
-
-
-@media (width <= 500px)
-{
-	main
-	{
-		grid-template-columns: 1fr;
-	}
 }
 
 .ligher
 {
 	font-weight: 300;
 }
+
+
+/********** media queries **********/
+
+@media (width >= 0px)
+{
+	main
+	{
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+@media (width >= 600px)
+{
+	main
+	{
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (width >= 1000px)
+{
+	main
+	{
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media (width >= 1400px)
+{
+	main
+	{
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+
+@media (width >= 2000px)
+{
+	main
+	{
+		grid-template-columns: repeat(6, 1fr);
+	}
+}
+
+@media (width >= 3000px)
+{
+	main
+	{
+		grid-template-columns: repeat(8, 1fr);
+	}
+}
+
+/***********************************/
