--- a/css/search_bar.css
+++ b/css/search_bar.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	gap: 3rem 0;
+	gap: max(5vh, 5vw);
 	margin: clamp(3vh, 3rem, 5vw) var(--main-margin);
 }
 
@@ -14,6 +14,7 @@
 	flex-wrap: nowrap;
 	background-color: var(--nav-bg-color);
 	height: 3rem;
+	align-items: center;
 	width: min(30rem, calc(100% - var(--main-margin) / 2));
 	box-shadow: 0px 1px 10px var(--shadow-color);
 	box-shadow: 0px -1px 10px var(--shadow-color);
@@ -26,11 +27,10 @@
 {
 	box-sizing: border-box;
 	border: none;
-	height: 100%;
-	line-height: 100%;
+	height: 90%;
+	line-height: 90%;
 	background-color: var(--nav-bg-color);
 	color: var(--text-color);
-	outline: none;
 	overflow: hidden;
 	margin: 0;
 }
@@ -48,52 +48,21 @@
 	width: 90%;
 }
 
-.search-input:focus-active
-{
-	outline: auto;
-}
-
 
 .search-bt
 {
 	font-weight: bolder;
-	width: 9%;
+	line-height: 100%;
+	width: 10%;
 }
 
 .search-bt ion-icon
 {
-	font-weight: bolder;
-	width: 100%;
+	font-size: 1rem;
+	text-align: center;
 }
 
-.search-bt:focus
+.search-bt:focus-visible
 {
-	border: var(--text-color) solid 1px;
+	border: double green 2px;
 }
-
-/*	general use classes	*/
-.small-shadow
-{
-	box-shadow: 0px 1px 7px var(--shadow-color);
-	box-shadow: 0px -1px 7px var(--shadow-color);
-	box-shadow: 1px 0px 7px var(--shadow-color);
-	box-shadow: -1px 0px 7px var(--shadow-color);
-}
-
-.rounded-corner
-{
-	border: solid var(--nav-bg-color) 1px;
-	border-radius: min(2vw, 1vh);
-	overflow: hidden;
-}
-
-.search-padding
-{
-	padding: 1rem 1rem;
-}
-
-.filter-padding
-{
-	padding: 1rem 2rem;
-}
-/*************************/
